# haskell-game

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  README.md  gameEngine.cabal  haskell-game.cabal  package.yaml  stack.yaml
GPipe-Core/GPipe-Core/: GPipe.cabal
GPipe-Core/GPipe-Core/src/Graphics/GPipe/Internal/: Buffer.hs  Compiler.hs  Context.hs  FragmentStream.hs  FrameBuffer.hs  PrimitiveArray.hs  PrimitiveStream.hs  Shader.hs  Texture.hs  Uniform.hs
GPipe-GLFW/: .gitignore  .travis.yml  cabal.project
GPipe-GLFW/GPipe-GLFW/: CHANGELOG.md  GPipe-GLFW.cabal  stack.yaml
GPipe-GLFW/GPipe-GLFW/src/Graphics/GPipe/Context/GLFW/: Calls.hs  Format.hs  Handler.hs  Input.hs  Window.hs  Wrappers.hs
GPipe-GLFW/Smoketests/: README.md  Smoketests.cabal  stack.yaml
GPipe-GLFW/Smoketests/src/: Close.hs  Fixed.hs  Input.hs  Manual.hs  Multi.hs  Sequence.hs  Split.hs  Timed.hs
GPipe-GLFW/Smoketests/src/Test/: Common.hs  Control.hs
apecs/apecs-physics/src/Apecs/: Physics.hs
apecs/apecs-physics/src/Apecs/Physics/: Body.hs  Collision.hs  Constraint.hs  Query.hs  Shape.hs  Space.hs
app/: Bullets.hs  Collision.hs  Enemies.hs  GameInput.hs  Input.hs  Main.hs  MyWindow.hs  Player.hs  Render.hs  Scenario.hs  SceneManager.hs  Step.hs  Types.hs  World.hs
app/Level/: Scene.hs  World.hs  WorldAccessors.hs
app/Level/Initialize/: CollisionHandler.hs  Player.hs
app/Level/Spawn/: Bullet.hs  Enemy.hs
app/Level/Step/: Delete.hs  Enemy.hs  Physics.hs  Player.hs  Scenario.hs
app/Render/: PresentRender.hs
app/Render/Level/: All.hs  Background.hs  Bullet.hs  Enemy.hs  Player.hs
app/Render/StartGame/: All.hs
app/Scene/: SceneManager.hs  Scenes.hs
app/Scene/Level/: Scene.hs  World.hs  WorldAccessors.hs
app/Scene/Level/Initialize/: CollisionHandler.hs  Player.hs
app/Scene/Level/Spawn/: Bullet.hs  Enemy.hs
app/Scene/Level/Step/: Delete.hs  Enemy.hs  Physics.hs  Player.hs  Scenario.hs
app/Scene/StartGame/: Scene.hs
app/StartGame/: Scene.hs
app_OLD/: Bullets.hs  Enemy.hs  Main.hs  Player.hs
old-code/: Focus  Gamelude.hs  Import.hs  Player  Resource  SDLInput_dep  SDLTesting.hs
old-code/GraphicsOld/: AccelerateExperiment.hs  Graphics_old  Internal.hs  RenderActions.hs  RendererOptions  ResourceActions.hs
old-code/src2/: Effect.hs  Import.hs  Resource.hs
old-code/src2/Effect/: .#Focus.hs  Focus.hs  Graphics.hs  Input.hs  Physics.hs  SDLInput.hs  Store.hs
old-code/src2/Effect/Graphics/: Internal.hs  RenderActions.hs
src/: Shapes2D  Shapes2D.hs  Sigma.hs  StateOperation.hs
src/Aux/Polysemy/: Input.hs
src/ECS/: Apecs.hs  Physics.hs
src/Effect/: Apecs.hs  GlobalState.hs  Graphics.hs  Input.hs  Physics.hs  Store.hs
src/GPipe/: Image.hs  Interface.hs
src/Graphics/: Image.hs  Internal.hs  ReadImage.hs  TextureBuilder.hs
src/Graphics/Shader/: ViewPort.hs
src/Input/: SDL.hs
src/Physics/: LowLevel.hs
src/Pictolib/: Image.hs
src/Sigma/: .#Switch.hs  Framerate.hs  Reactimate.hs  Signal.hs  Switch.hs
src/Sigma/Polysemy/: Input.hs
src/Window/: GPipe.hs
test/: Spec.hs
