name:           Smoketests
version:        0.0.1
cabal-version:  >=1.10
build-type:     Simple
author:         Patrick Redmond
license:        MIT
copyright:      Patrick Redmond
category:       Graphics
stability:      Experimental
homepage:       https://github.com/plredmond/GPipe-GLFW
synopsis:       Smoke tests of the GPipe-GLFW library for GPipe
maintainer:     Patrick Redmond

test-suite fixed
  main-is:             Fixed.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite timed
  main-is:             Timed.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite input
  main-is:             Input.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite manual
  main-is:             Manual.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite close
  main-is:             Close.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite sequence
  main-is:             Sequence.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--test-suite split
--  main-is:             Split.hs
--  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
--  hs-source-dirs:      src
--  other-modules:       Test.Common
--  type:                exitcode-stdio-1.0
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
--
--test-suite multi
--  main-is:             Multi.hs
--  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
--  hs-source-dirs:      src
--  other-modules:       Test.Common
--  type:                exitcode-stdio-1.0
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
